--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css"> 
+    <link rel='stylesheet' href='https://fonts.google.com/specimen/Raleway'>
     <title>desafio_rede_social</title>
 </head>
 <body>
